@@ -722,6 +722,7 @@ Addr setup_client_stack( void*  init_sp,
                                  | VKI_HWCAP_S390_VXRS
                                  | VKI_HWCAP_S390_VXRS_EXT
                                  | VKI_HWCAP_S390_VXRS_EXT2
+                                 | VKI_HWCAP_S390_DFLT
                                  | VKI_HWCAP_S390_NNPA);
             }
 #           elif defined(VGP_arm64_linux)
